2010-01-27  Kwang Yul Seo  <skyul@company100.net>

        Reviewed by Eric Seidel.

        [BREWMP] Port WTF's randomNumber
        https://bugs.webkit.org/show_bug.cgi?id=33566

        Use GETRAND to generate 4 byte random byte sequence to implement
        weakRandomNumber. Create a secure random number generator with
        AEECLSID_RANDOM to implement randomNumber.

        * wtf/RandomNumber.cpp:
        (WTF::weakRandomNumber):
        (WTF::randomNumber):

2010-01-27  Kwang Yul Seo  <skyul@company100.net>

        Reviewed by Eric Seidel.

        [BREWMP] Port getCPUTime
        https://bugs.webkit.org/show_bug.cgi?id=33572

        Use GETUPTIMEMS which returns a continuously and
        linearly increasing millisecond timer from the time the device
        was powered on. This function is enough to implement getCPUTime.

        * runtime/TimeoutChecker.cpp:
        (JSC::getCPUTime):

2010-01-27  Kwang Yul Seo  <skyul@company100.net>

        Reviewed by Oliver Hunt.

        [BREWMP] Add MarkStack fastMalloc implementation for platforms without VirtualAlloc or mmap.
        https://bugs.webkit.org/show_bug.cgi?id=33582

        Use fastMalloc and fastFree to implement MarkStack::allocateStack and
        MarkStack::releaseStack for platforms without page level allocation.

        * runtime/MarkStack.h:
        (JSC::MarkStack::MarkStackArray::shrinkAllocation):
        * runtime/MarkStackNone.cpp: Added.
        (JSC::MarkStack::initializePagesize):
        (JSC::MarkStack::allocateStack):
        (JSC::MarkStack::releaseStack):

2010-01-27  Kwang Yul Seo  <skyul@company100.net>

        Reviewed by Eric Seidel.

        [BREWMP] Don't use time function
        https://bugs.webkit.org/show_bug.cgi?id=33577

        Calling time(0) in BREW devices causes a crash because time
        is not properly ported in most devices. Cast currentTime() to
        time_t to get the same result as time(0).

        * wtf/DateMath.cpp: