@@ -1,3 +1,13 @@
+2010-01-27  Anton Muhin  <antonm@chromium.org>
+
+        Reviewed by Darin Adler.
+
+        Remove trailing \ from inline function code
+        https://bugs.webkit.org/show_bug.cgi?id=34223
+
+        * assembler/ARMv7Assembler.h:
+        (JSC::ARMThumbImmediate::countLeadingZerosPartial):
+
 2010-01-27  Kwang Yul Seo  <skyul@company100.net>
 
         Reviewed by Eric Seidel.
